--- a/frontend/src/app/modules/+accounts/components/statistics/statistics.component.html
+++ b/frontend/src/app/modules/+accounts/components/statistics/statistics.component.html
@@ -1,7 +1,5 @@
 <div class="statistics">
-  <h1 class="statistics__title">
-    Данные о транзакциях за последние 10 дней
-  </h1>
+  <h1 class="statistics__title">Данные о транзакциях за последние {{ daysRange + 1 }} дней</h1>
 
   <div class="statistics__chart">
     <ngx-charts-line-chart
