Updated Angular to 13

--- a/frontend/src/assets/scss/theme.scss
+++ b/frontend/src/assets/scss/theme.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 // @include mat-core();
 // $custom-theme-primary: mat-palette($mat-grey, 900);
